--- a/xy.html
+++ b/xy.html
@@ -14,7 +14,7 @@
 <script type="module" src="https://cdn.jsdelivr.net/gh/zerodevx/zero-md@1/src/zero-md.min.js"></script>
 
 <!-- Simply set the `src` attribute to your MD file and win -->
-<zero-md src=" intro.md"></zero-md>
+<zero-md src=" ./basic/part2.md"></zero-md>
 <h1>1</h1>
 <h1>1</h1>
 <h1>1</h1>
